 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

      <PreferenceCategory android:title="@string/nandroid_title">
  <PreferenceScreen android:key="makenandroid" android:summary="Make an (online) nandroid backup right now without rebooting in CWM" android:title="@string/nandroidbackup_str">
                                     <intent android:targetPackage="com.broodplank.nandroidodin" android:action="android.intent.action.MAIN" android:targetClass="com.broodplank.nandroidodin.NANDROIDBACKUP" /> 
                               </PreferenceScreen>      
                        <PreferenceScreen android:key="restorenandroid" android:summary="Restore an earlier nandroid backup by rebooting in CWM" android:title="@string/nandroidrestore_str">
                                     <intent android:targetPackage="com.broodplank.nandroidodin" android:action="android.intent.action.MAIN" android:targetClass="com.broodplank.nandroidodin.NANDROIDRESTORE" /> 
                               </PreferenceScreen>    
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/odin_title">
                            <PreferenceScreen android:key="makeodin" android:summary="Make a ready to flash Odin ROM of your current ROM installation, please note that the Odin ROM is only flashable in Windows" android:title="@string/makeodin_str">
                                     <intent android:targetPackage="com.broodplank.nandroidodin" android:action="android.intent.action.MAIN" android:targetClass="com.broodplank.nandroidodin.MAKEODIN" /> 
                               </PreferenceScreen>    
                               <PreferenceScreen android:key="custodin" android:summary="Select the partitions you want to include in the Odin Image" android:title="@string/custodin_str">
                                     <intent android:targetPackage="com.broodplank.nandroidodin" android:action="android.intent.action.MAIN" android:targetClass="com.broodplank.nandroidodin.CUSTODIN" /> 
                               </PreferenceScreen>    
                                     
              </PreferenceCategory>
               
</PreferenceScreen>
